--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "grunt": "^1.0.3"
+    "grunt": "^1.0.3",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-nodeunit": "^2.0.0",
+    "grunt-contrib-uglify": "^3.4.0"
   }
 }
