--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt": "^1.0.3",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-nodeunit": "^2.0.0",
-    "grunt-contrib-uglify": "^3.4.0"
+    "grunt-contrib-uglify": "^3.4.0",
+    "grunt-uncss": "^0.8.5"
   }
 }
