--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-nodeunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.4.0",
     "grunt-uncss": "^0.8.5",
+    "gulp": "^3.9.1",
     "postcss-uncss": "^0.16.1",
     "uncss": "^0.16.2"
   }
