Install grunt-purifycss

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-nodeunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.4.0",
+    "grunt-purifycss": "^0.1.2",
     "grunt-uncss": "^0.8.5",
     "gulp": "^3.9.1",
+    "gulp-postcss": "7.0.1",
     "postcss-uncss": "^0.16.1",
     "uncss": "^0.16.2"
   }
