--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-nodeunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.4.0",
-    "grunt-purifycss": "^0.1.2",
-    "grunt-uncss": "^0.8.5",
-    "postcss-uncss": "^0.16.1",
-    "uncss": "^0.16.2"
+    "grunt-purifycss": "^0.1.2"
   }
 }
