--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "gogs-client": "^0.5.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sync-request": "^6.0.0",
+    "then-request": "^6.0.0"
   }
 }
