--- a/src/fixtures/apps/json/appItemFive.json
+++ b/src/fixtures/apps/json/appItemFive.json
@@ -5,7 +5,7 @@
   },
   "description": "Description of the five item...",
   "icon": "https://picsum.photos/g/596/596/?random",
-  "infoBtn": "https://picsum.photos/g/596/596/?random",
+  "infoBtn": "https://support.apple.com/library/APPLE/APPLECARE_ALLGEOS/Product_Help/en_US/PUBLIC_USERS/134392/S0802_AppPreviewBrowser.png",
   "downloadBtn": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
   "legal": {
     "tos": "123",
