--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.18.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "snazzy": "^7.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
