--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
+    "semistandard": "^12.0.1",
     "snazzy": "^7.1.1"
   },
   "scripts": {
