Implement code lint scripts

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "node ./node_modules/semistandard/bin/cmd.js --verbose | node ./node_modules/snazzy/bin/cmd.js || true",
+    "lint-log": "npm run lint > lint.log ; open lint.log || true",
+    "lint-linux-log": "npm run lint > lint.log ; open lint.log || true"
   },
   "devDependencies": {
     "grunt": "^1.0.3",
@@ -22,5 +25,11 @@
     "grunt-contrib-nodeunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.4.0",
     "grunt-purifycss": "^0.1.2"
+  },
+  "semistandard": {
+    "ignore": [
+      "public/",
+      "node_modules"
+    ]
   }
 }
